
  * tests/test_apt_cache.py, tests/test_lp659438.py, tests/test_progress.py:
    - Clear out APT::Update::Post-Invoke and
      APT::Update::Post-Invoke-Success in tests that call cache.update to
      avoid pollution from the host system.
  * tests/test_auth.py:
    - Discard stderr from gpg.
    - Try successive keyserver ports if 19191 is already in use.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Nov 2012 11:57:28 +0000

python-apt (0.8.8ubuntu3) raring; urgency=low

  * tests/test_lp659438.py:
    - Add an Architecture: line to the test Packages file so that apt
      doesn't get upset with it.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Nov 2012 15:03:36 +0000

python-apt (0.8.8ubuntu2) raring; urgency=low

  * data/templates/Ubuntu.info.in:
    - Fix descriptions of quantal and raring.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 07 Nov 2012 13:16:33 +0000

python-apt (0.8.8ubuntu1) raring; urgency=low

  [ Michael Vogt ]
  * merged from the debian-sid branch:
    - do not build-depend on python-unittest2, only needed for python2.6
  * merged from the debian-experimental branch
  * python/tag.cc:
    - make TagSecString_FromStringAndSize, TagSecString_FromString
      static, thanks to jcristau
  * python/cache.cc:
    - add "Codename" to PackageFile object
  * add dep8 style autopkgtest support
  * build fixes for python3.3
  * data/templates/Ubuntu.info.in:
    - add raring
  
  [ Jason Conti ]
  * lp:~jconti/python-apt/closeable-cache:
    - add apt.Cache.close() method

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Oct 2012 12:58:13 +0200
  
python-apt (0.8.8) unstable; urgency=low

  [ Program translation updates ]
  * po/pl.po: Polish (Michał Kułach) (closes: #684308)
  * po/da.po: Danish (Joe Hansen) (closes: #689827)

  [ Michael Vogt ]
  * merged lp:~sampo555/python-apt/fix_1042916 reuse existing but
    disabled sources.list entries instead of duplicating them.
    Thanks to "sampo555", LP: #1042916