@@ -7,6 +7,9 @@ python-apt (0.8.8ubuntu4) UNRELEASED; urgency=low
   * tests/test_auth.py:
     - Discard stderr from gpg.
     - Try successive keyserver ports if 19191 is already in use.
+  * aptsources/distinfo.py, aptsources/distro.py, aptsources/sourceslist.py,
+    tests/test_apt_cache.py, tests/test_debfile_multiarch.py:
+    - Use logging.warning rather than the deprecated logging.warn.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Nov 2012 11:57:28 +0000
 
